--- a/openAI_and_data_processing.ipynb
+++ b/openAI_and_data_processing.ipynb
@@ -807,9 +807,9 @@
    "id": "cd5837c8-fb8d-4fd8-8b5b-0d0ba918bc87",
    "metadata": {},
    "source": [
-    "The process_text function is more verstatile than you think. It returns the text response from openAi's algorithm.\n",
+    "The `process_text` function is more verstatile than you think. It returns the text response from openAi's algorithm.\n",
     "\n",
-    "You can the `process_text` function an entire dataset as well in order to gain insight."
+    "You can use the `process_text` function a pandas dataframe in order to gain insight."
    ]
   },
   {
@@ -887,7 +887,7 @@
    "id": "9dd4d5df-7dee-43da-9357-f3b57b1d0b3f",
    "metadata": {},
    "source": [
-    "This method is quicker than the iterative process above, though given that the output of these models is subject to change, I do not feel confident building code dependent on these outputs. We are at a crawling phase with these models."
+    "This method is quicker than the iterative process above, though given that the output of these models is subject to change, I do not feel confident building code dependent on these outputs. Developmentally, we are still at a crawling phase with these models."
    ]
   }
  ],
