--- a/openAI_and_data_processing.ipynb
+++ b/openAI_and_data_processing.ipynb
@@ -809,7 +809,7 @@
    "source": [
     "The `process_text` function is more verstatile than you think. It returns the text response from openAi's algorithm.\n",
     "\n",
-    "You can use the `process_text` function a pandas dataframe in order to gain insight."
+    "You can use the `process_text` function on a pandas dataframe in order to gain insight."
    ]
   },
   {
