--- a/openAI_and_data_processing.ipynb
+++ b/openAI_and_data_processing.ipynb
@@ -108,7 +108,7 @@
     {
      "data": {
       "text/plain": [
-       "' 1279 is the smallest number that can be written as the sum of two cubes in two different ways: 1279 = 13^3 + 10^3 = 9^3 + 12^3.'"
+       "' 1279 is the smallest number that can be written as the sum of two cubes in two different ways: 1279 = 13^3 + 10^3 = 9^3 + 18^3.'"
       ]
      },
      "execution_count": 3,
@@ -445,7 +445,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>index</th>\n",
        "      <th>testament</th>\n",
        "      <th>book</th>\n",
        "      <th>title</th>\n",
@@ -459,7 +458,6 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0</td>\n",
        "      <td>NT</td>\n",
        "      <td>777</td>\n",
        "      <td>Gospel of Mary Magdalene</td>\n",
@@ -471,7 +469,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1</td>\n",
        "      <td>NT</td>\n",
        "      <td>777</td>\n",
        "      <td>Gospel of Mary Magdalene</td>\n",
@@ -483,7 +480,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2</td>\n",
        "      <td>NT</td>\n",
        "      <td>777</td>\n",
        "      <td>Gospel of Mary Magdalene</td>\n",
@@ -495,7 +491,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>3</td>\n",
        "      <td>NT</td>\n",
        "      <td>777</td>\n",
        "      <td>Gospel of Mary Magdalene</td>\n",
@@ -507,7 +502,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>4</td>\n",
        "      <td>NT</td>\n",
        "      <td>777</td>\n",
        "      <td>Gospel of Mary Magdalene</td>\n",
@@ -519,7 +513,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>5</td>\n",
        "      <td>NT</td>\n",
        "      <td>777</td>\n",
        "      <td>Gospel of Mary Magdalene</td>\n",
@@ -531,7 +524,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>6</td>\n",
        "      <td>NT</td>\n",
        "      <td>777</td>\n",
        "      <td>Gospel of Mary Magdalene</td>\n",
@@ -543,7 +535,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>7</td>\n",
        "      <td>NT</td>\n",
        "      <td>777</td>\n",
        "      <td>Gospel of Mary Magdalene</td>\n",
@@ -558,15 +549,15 @@
        "</div>"
       ],
       "text/plain": [
-       "   index testament  book                     title  chapter  verse  \\\n",
-       "0      0        NT   777  Gospel of Mary Magdalene        1      0   \n",
-       "1      1        NT   777  Gospel of Mary Magdalene        1      1   \n",
-       "2      2        NT   777  Gospel of Mary Magdalene        1      2   \n",
-       "3      3        NT   777  Gospel of Mary Magdalene        1      3   \n",
-       "4      4        NT   777  Gospel of Mary Magdalene        1      4   \n",
-       "5      5        NT   777  Gospel of Mary Magdalene        1      5   \n",
-       "6      6        NT   777  Gospel of Mary Magdalene        1      6   \n",
-       "7      7        NT   777  Gospel of Mary Magdalene        1      7   \n",
+       "  testament  book                     title  chapter  verse  \\\n",
+       "0        NT   777  Gospel of Mary Magdalene        1      0   \n",
+       "1        NT   777  Gospel of Mary Magdalene        1      1   \n",
+       "2        NT   777  Gospel of Mary Magdalene        1      2   \n",
+       "3        NT   777  Gospel of Mary Magdalene        1      3   \n",
+       "4        NT   777  Gospel of Mary Magdalene        1      4   \n",
+       "5        NT   777  Gospel of Mary Magdalene        1      5   \n",
+       "6        NT   777  Gospel of Mary Magdalene        1      6   \n",
+       "7        NT   777  Gospel of Mary Magdalene        1      7   \n",
        "\n",
        "                                                text version language  \n",
        "0                    [Pages 1 through 6 are missing]    KSGM       EN  \n",
@@ -585,7 +576,7 @@
     }
    ],
    "source": [
-    "ksgm = pd.read_csv('ksgm.csv').head(8)\n",
+    "ksgm = pd.read_csv('super_bible_KSGM.csv').head(8)\n",
     "ksgm"
    ]
   },
@@ -624,7 +615,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>index</th>\n",
        "      <th>testament</th>\n",
        "      <th>book</th>\n",
        "      <th>title</th>\n",
@@ -639,7 +629,6 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0</td>\n",
        "      <td>NT</td>\n",
        "      <td>777</td>\n",
        "      <td>Gospel of Mary Magdalene</td>\n",
@@ -648,11 +637,10 @@
        "      <td>[Pages 1 through 6 are missing]</td>\n",
        "      <td>KSGM</td>\n",
        "      <td>EN</td>\n",
-       "      <td>\"[Les pages 1 à 6 manquent.]\"</td>\n",
+       "      <td>Les pages 1 à 6 manquent.</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1</td>\n",
        "      <td>NT</td>\n",
        "      <td>777</td>\n",
        "      <td>Gospel of Mary Magdalene</td>\n",
@@ -665,7 +653,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2</td>\n",
        "      <td>NT</td>\n",
        "      <td>777</td>\n",
        "      <td>Gospel of Mary Magdalene</td>\n",
@@ -678,7 +665,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>3</td>\n",
        "      <td>NT</td>\n",
        "      <td>777</td>\n",
        "      <td>Gospel of Mary Magdalene</td>\n",
@@ -691,7 +677,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>4</td>\n",
        "      <td>NT</td>\n",
        "      <td>777</td>\n",
        "      <td>Gospel of Mary Magdalene</td>\n",
@@ -700,11 +685,10 @@
        "      <td>Peter said to Him: ``As you have told us all a...</td>\n",
        "      <td>KSGM</td>\n",
        "      <td>EN</td>\n",
-       "      <td>Peter lui a dit : « Comme vous nous avez tout...</td>\n",
+       "      <td>Pierre lui a dit : « Comme vous nous avez tou...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>5</td>\n",
        "      <td>NT</td>\n",
        "      <td>777</td>\n",
        "      <td>Gospel of Mary Magdalene</td>\n",
@@ -717,7 +701,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>6</td>\n",
        "      <td>NT</td>\n",
        "      <td>777</td>\n",
        "      <td>Gospel of Mary Magdalene</td>\n",
@@ -730,7 +713,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>7</td>\n",
        "      <td>NT</td>\n",
        "      <td>777</td>\n",
        "      <td>Gospel of Mary Magdalene</td>\n",
@@ -746,15 +728,15 @@
        "</div>"
       ],
       "text/plain": [
-       "   index testament  book                     title  chapter  verse  \\\n",
-       "0      0        NT   777  Gospel of Mary Magdalene        1      0   \n",
-       "1      1        NT   777  Gospel of Mary Magdalene        1      1   \n",
-       "2      2        NT   777  Gospel of Mary Magdalene        1      2   \n",
-       "3      3        NT   777  Gospel of Mary Magdalene        1      3   \n",
-       "4      4        NT   777  Gospel of Mary Magdalene        1      4   \n",
-       "5      5        NT   777  Gospel of Mary Magdalene        1      5   \n",
-       "6      6        NT   777  Gospel of Mary Magdalene        1      6   \n",
-       "7      7        NT   777  Gospel of Mary Magdalene        1      7   \n",
+       "  testament  book                     title  chapter  verse  \\\n",
+       "0        NT   777  Gospel of Mary Magdalene        1      0   \n",
+       "1        NT   777  Gospel of Mary Magdalene        1      1   \n",
+       "2        NT   777  Gospel of Mary Magdalene        1      2   \n",
+       "3        NT   777  Gospel of Mary Magdalene        1      3   \n",
+       "4        NT   777  Gospel of Mary Magdalene        1      4   \n",
+       "5        NT   777  Gospel of Mary Magdalene        1      5   \n",
+       "6        NT   777  Gospel of Mary Magdalene        1      6   \n",
+       "7        NT   777  Gospel of Mary Magdalene        1      7   \n",
        "\n",
        "                                                text version language  \\\n",
        "0                    [Pages 1 through 6 are missing]    KSGM       EN   \n",
@@ -767,11 +749,11 @@
        "7  Because of this, the Lord comes into your mids...    KSGM       EN   \n",
        "\n",
        "                                            response  \n",
-       "0                      \"[Les pages 1 à 6 manquent.]\"  \n",
+       "0                          Les pages 1 à 6 manquent.  \n",
        "1              ``La matière sera-t-elle détruite ?''  \n",
        "2                                 Le Sauveur a dit :  \n",
        "3   ``Toute forme de la nature, chaque créature, ...  \n",
-       "4   Peter lui a dit : « Comme vous nous avez tout...  \n",
+       "4   Pierre lui a dit : « Comme vous nous avez tou...  \n",
        "5                             Le Sauveur a répondu :  \n",
        "6   Il n'y a pas de péché dans le monde. C'est vo...  \n",
        "7   En raison de cela, le Seigneur vient au milie...  "
@@ -839,7 +821,7 @@
     {
      "data": {
       "text/plain": [
-       "' item: animal (cat, dog), stationary (pen), instrument (whistle), planet (Jupiter), vehicle (car), plant (orchid, lotus), object (book)'"
+       "' The item field in this dataset is classified as objects.'"
       ]
      },
      "execution_count": 9,
@@ -870,7 +852,7 @@
     {
      "data": {
       "text/plain": [
-       "' index testament livre titre chapitre verset texte version langue\\n0      0        NT   777  Évangile de Marie-Madeleine        1      0   \\n1      1        NT   777  Évangile de Marie-Madeleine        1      1   \\n2      2        NT   777  Évangile de Marie-Madeleine        1      2   \\n3      3        NT   777  Évangile de Marie-Madeleine        1      3   \\n4      4        NT   777'"
+       "' le champ appelé texte dans ce jeu de données en français: \"testament livre titre chapitre verset\\n0        NT   777  Évangile de Marie Madeleine        1      0   \\n1        NT   777  Évangile de Marie Madeleine        1      1   \\n2        NT   777  Évangile de Marie Madeleine        1      2   \\n3        NT   777  Évangile de Marie Madeleine        1      3   \\n'"
       ]
      },
      "execution_count": 10,
@@ -879,7 +861,7 @@
     }
    ],
    "source": [
-    "process_text('translate the text field in this dataset into french', ksgm)"
+    "process_text('translate the field called text in this dataset into french', ksgm)"
    ]
   },
   {
