--- a/openAI_and_data_processing.ipynb
+++ b/openAI_and_data_processing.ipynb
@@ -796,7 +796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "id": "4038aafb-7340-4a1d-bfd4-baee68a5bfe0",
    "metadata": {},
    "outputs": [
@@ -821,10 +821,10 @@
     {
      "data": {
       "text/plain": [
-       "' The item field in this dataset is classified as objects.'"
+       "' Animals: cat, dog\\nStationery: pen\\nInstruments: whistle\\nPlants: orchid, lotus\\nPlanets: Jupiter\\nVehicles: car\\nObjects: book'"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -832,7 +832,7 @@
    "source": [
     "print(data)\n",
     "print('\\n')\n",
-    "process_text('classify the item field in this dataset',data)"
+    "process_text('classify the items in this dataset',data)"
    ]
   },
   {
