--- a/openAI_and_data_processing.ipynb
+++ b/openAI_and_data_processing.ipynb
@@ -122,16 +122,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d164f575-72a2-45aa-a9b9-dd8e7f815f0f",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
    "id": "ea04780f-7fa1-4884-b12d-1f4f4a54583a",
    "metadata": {},
    "source": [
     "Srinivasa Ramanujan gave us that one already, davinci. I was hoping for something new, but thank you."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d164f575-72a2-45aa-a9b9-dd8e7f815f0f",
+   "metadata": {},
+   "source": [
+    "How about this one: In 1279, the discovery of Mary Magdalene in the crypt of the church of Saint-Maximin, southeastern France."
    ]
   },
   {
