--- a/openAI_and_data_processing.ipynb
+++ b/openAI_and_data_processing.ipynb
@@ -133,7 +133,11 @@
    "id": "d164f575-72a2-45aa-a9b9-dd8e7f815f0f",
    "metadata": {},
    "source": [
-    "How about this one: In 1279, the discovery of Mary Magdalene in the crypt of the church of Saint-Maximin, southeastern France."
+    "How about this one: In 1279, the discovery of Mary Magdalene in the crypt of the church of Saint-Maximin, southeastern France.\n",
+    "\n",
+    "Ah. Ramanujan worked with 1729. You are right. \n",
+    "The Ai fell for my trap. I kind of knew they would. \n",
+    "But it was a good way of bringing up Mary."
    ]
   },
   {
