will add folium tutorial later

--- a/Geospatial Analytics/painting_by_numbers.ipynb
+++ b/Geospatial Analytics/painting_by_numbers.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "# Painting by Numbers \n",
-    "The point of this document is to serve as an introduction into geospatial analytics using Python's `geopandas` and `folium` packages.\n",
+    "The point of this document is to serve as an introduction into geospatial analytics using Python's `geopandas`.\n",
     "\n",
     "For now, we start by painting the State of Texas Red, White, and Blue.\n",
     "\n",
@@ -318,7 +318,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x6f890984f0>]"
+       "[<matplotlib.lines.Line2D at 0x7703cb8df0>]"
       ]
      },
      "execution_count": 8,
@@ -364,7 +364,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x6f88e35430>]"
+       "[<matplotlib.lines.Line2D at 0x76b96ee6d0>]"
       ]
      },
      "execution_count": 9,
@@ -425,18 +425,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "id": "1938b01d-dbec-4df3-b98c-d29bcb383d1a",
    "metadata": {},
    "outputs": [],
    "source": [
     "def bin(p):\n",
     "    if p.y < g(p.x):\n",
-    "        return 'Red'\n",
+    "        return 'red'\n",
     "    elif p.y > f(p.x):\n",
-    "        return 'Blue'\n",
+    "        return 'blue'\n",
     "    else:\n",
-    "        return 'White'\n",
+    "        return 'white'\n",
     "    \n",
     "zipcodes['color'] = list(map(bin,zipcodes.zipcode_centers))"
    ]
@@ -451,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "id": "a20722cb-2182-40f5-8438-47ed30b74bfe",
    "metadata": {},
    "outputs": [
@@ -469,13 +469,11 @@
    "source": [
     "fig, ax = plt.subplots()\n",
     "\n",
-    "colors = {'Red':'red', 'White':'white', 'Blue':'blue'}\n",
-    "\n",
     "plt.axis('off')\n",
     "\n",
     "grouped = zipcodes.groupby('color')\n",
     "for key, group in grouped:\n",
-    "    group.plot(ax=ax, label=key, color=colors[key])\n",
+    "    group.plot(ax=ax, label=key, color=key)\n",
     "\n",
     "# save plot to file\n",
     "plt.savefig('texas_rwb.png')\n",
