removing unused folium dependency for now.

--- a/Geospatial Analytics/painting_by_numbers.ipynb
+++ b/Geospatial Analytics/painting_by_numbers.ipynb
@@ -10,6 +10,8 @@
     "\n",
     "For now, we start by painting the State of Texas Red, White, and Blue.\n",
     "\n",
+    "![](texas_rwb.png)\n",
+    "\n",
     "It is assumed that the reader has jupyterlab installed, along with the following packages:"
    ]
   },
@@ -24,7 +26,6 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import folium\n",
     "\n",
     "plt.style.use('dark_background')"
    ]
@@ -344,7 +345,7 @@
     "f1 = list(map(f,x))\n",
     "\n",
     "zipcodes.plot()\n",
-    "plt.plot(x, f1, '-r')"
+    "plt.plot(x, f1, '-b')"
    ]
   },
   {
