adding to tutorial

--- a/Geospatial Analytics/painting_by_numbers.ipynb
+++ b/Geospatial Analytics/painting_by_numbers.ipynb
@@ -35,6 +35,8 @@
    "id": "6f99b117-9f56-4419-99c5-dfe4554187ee",
    "metadata": {},
    "source": [
+    "Geopandas imports shapefiles and geojson files easily with the `geopandas.read_file` function. Since we imported geopandas with `import geopandas as gpd`, we call it via `gpd.read_file`.\n",
+    "\n",
     "First, download the zipcode geojson [alshival/State-zip-code-GeoJSON](https://raw.githubusercontent.com/alshival/State-zip-code-GeoJSON/master/tx_texas_zip_codes_geo.min.json), a project I forked originally from [Open Data Delaware](https://github.com/OpenDataDE). "
    ]
   },
