--- a/Geospatial Analytics/painting_by_numbers.ipynb
+++ b/Geospatial Analytics/painting_by_numbers.ipynb
@@ -386,7 +386,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7731cbafa0>]"
+       "[<matplotlib.lines.Line2D at 0x7c54f4f9d0>]"
       ]
      },
      "execution_count": 10,
@@ -428,7 +428,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7731a248b0>]"
+       "[<matplotlib.lines.Line2D at 0x7c54c7a4c0>]"
       ]
      },
      "execution_count": 11,
@@ -540,8 +540,8 @@
     "    group.plot(ax=ax, label=key, color=key)\n",
     "\n",
     "# save plot to file\n",
-    "plt.savefig('texas_rwb.png')\n",
-    "plt.savefig('texas_rwb_transparent.png',transparent=True)\n",
+    "plt.savefig('texas_rwb.png',dpi=600)\n",
+    "plt.savefig('texas_rwb_transparent.png',transparent=True,dpi=600)\n",
     "plt.show()"
    ]
   },
@@ -572,7 +572,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.LineCollection at 0x772df45a60>"
+       "<matplotlib.collections.LineCollection at 0x7c5129dbe0>"
       ]
      },
      "execution_count": 15,
@@ -620,7 +620,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.LineCollection at 0x772dd468e0>"
+       "<matplotlib.collections.LineCollection at 0x7c50f8bd60>"
       ]
      },
      "execution_count": 16,
@@ -737,8 +737,8 @@
     "plt.scatter(x=-101.5,y=32.25,marker=\"*\",c='w',s=2050)\n",
     "\n",
     "# save plot to file\n",
-    "plt.savefig('lone_star_rwb.png')\n",
-    "plt.savefig('lone_star_rwb_transparent.png',transparent=True)\n",
+    "plt.savefig('lone_star_rwb.png',dpi=600)\n",
+    "plt.savefig('lone_star_rwb_transparent.png',transparent=True,dpi=600)\n",
     "plt.show()"
    ]
   }
